Vistas mejoradas. Barra de cabecera borrada

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,11 @@
+.logo_container {
+  background-color: #ed1d24;
+  padding: 0.5em;
+  height: 100%;
+  img {
+    background-color: #ed1d24;
+  }
+}
 .nano {
   display: flex;
   justify-content: space-around;
