--- a/src/app/app.componentdetail.scss
+++ b/src/app/app.componentdetail.scss
@@ -6,7 +6,7 @@
 
   .list {
     background-color: #ededed;
-    width: 50%;
+    width: 33%;
     padding: 0.2em;
     border: 2px solid white;
     .cabeceraLista {
@@ -17,7 +17,6 @@
     }
     .detalle {
       width: 100%;
-
       display: flex;
       justify-content: center;
       align-items: center;
@@ -33,13 +32,14 @@
           align-items: center;
           flex-direction: column;
           background-color: #ed1d24;
+          color: white;
           img {
             width: 100%;
           }
           h5 {
             width: 100%;
             text-align: center;
-            color: white;
+
             text-overflow: "...";
             overflow: hidden;
           }
@@ -55,7 +55,7 @@
   align-items: center;
   flex-direction: column;
   img {
-    width: 85vw;
+    width: 95vw;
     border: 10px solid #ededed;
   }
   .info {
@@ -69,7 +69,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 596px) {
   .listItems {
     margin-top: 2em;
     display: flex;
@@ -77,9 +77,12 @@
     .list {
       width: 33%;
       .detalle {
+        text-align: center;
+        margin-bottom: 2vh;
         div {
+          width: 100%;
           a {
-            height: 45vw;
+            height: 70vw;
           }
         }
       }
@@ -92,7 +95,7 @@
     align-items: center;
     flex-direction: row;
     img {
-      width: 35vw;
+      width: 25vw;
     }
     .info {
       width: 50%;
@@ -101,6 +104,24 @@
       .anchors {
         display: flex;
         flex-direction: column;
+      }
+    }
+  }
+}
+
+@media (min-width: 992px) {
+  .listItems {
+    margin-top: 2em;
+    display: flex;
+    justify-content: space-between;
+    .list {
+      .detalle {
+        width: 100%;
+        div {
+          a {
+            height: 45vw;
+          }
+        }
       }
     }
   }
