arreglado el logo en vistas grandes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     class="row sticky-top bg-transparent d-none d-sm-block justify-content-center align-items-center logo"
     style="height: 13vh; background-color: #ed1d24"
   >
-    <div class="col-sm-2 logo_container fixed-top">
+    <div class="col-sm-2 logo_container fixed-top" style="min-width: 8em">
       <img class="img-thumbnail" src="../assets/marvel-logo.svg" alt="" />
     </div>
     <div class="col"></div>
@@ -72,7 +72,7 @@
           <div class="input-group mb-3">
             <input
               type="text"
-              class="form-control col-12"
+              class="form-control inputField"
               placeholder="Search..."
               aria-label="Búsqueda"
               aria-describedby="basic-addon2"
