--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 .logo_container {
   background-color: #ed1d24;
   padding: 0.5em;
-
+  height: 15vh;
   img {
     background-color: #ed1d24;
   }
@@ -49,6 +49,11 @@
   }
 }
 
+input {
+  width: 8vw;
+  border: 2px solid black;
+}
+
 @media (min-width: 768px) {
   .posFx {
     position: fixed;
@@ -63,6 +68,7 @@
       div {
         input {
           width: 5vw;
+          border: 2px solid black;
         }
       }
     }
@@ -70,19 +76,24 @@
 
   .characters {
     top: 5em;
+    margin: 0 2vw;
   }
   .comics {
     top: 8em;
+    margin: 0 2vw;
   }
   .events {
     top: 11em;
+    margin: 0 2vw;
   }
   .authors {
     top: 14em;
+    margin: 0 2vw;
   }
 
   .aboutUs {
     top: 17em;
+    margin: 0 2vw;
   }
   .nano {
     .carjeta {
