mejorando vistas del logo del container principal. Eliminados los bordes del logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,11 @@
     style="height: 13vh; background-color: #ed1d24"
   >
     <div class="col-sm-2 logo_container fixed-top" style="min-width: 8em">
-      <img class="img-thumbnail" src="../assets/marvel-logo.svg" alt="" />
+      <img
+        class="img-thumbnail border-0"
+        src="../assets/marvel-logo.svg"
+        alt=""
+      />
     </div>
     <div class="col"></div>
   </div>
@@ -13,10 +17,10 @@
     <div class="container-fluid" style="background-color: #ed1d24">
       <a class="navbar-brand" href="#">
         <img
-          class="img-fluid img-thumbnail"
+          class="img-fluid img-thumbnail border-0"
           src="../assets/marvel-logo.svg"
           alt=""
-          style="max-width: 10em"
+          style="max-width: 10em; background-color: #ed1d24"
         />
       </a>
       <button
